--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,6 @@ inflection==0.3.1
 itypes==1.1.0
 Jinja2==2.10.3
 jwt==0.6.1
-kafka-python==1.4.7
 kombu==4.6.7
 MarkupSafe==1.1.1
 more-itertools==8.0.2
@@ -29,7 +28,6 @@ openapi-codec==1.3.2
 packaging==19.2
 pipreqs==0.4.9
 pycparser==2.19
-PyJWT==1.7.1
 PyMySQL==0.9.3
 pyparsing==2.4.2
 pytz==2019.3
@@ -47,3 +45,5 @@ yarg==0.1.9
 zipp==0.6.0
 redis==3.4.1
 pandas==1.0.3
+django-cors-headers==3.2.1
+psutil==5.7.0
