--- a/requirements.txt
+++ b/requirements.txt
@@ -1,60 +1,15 @@
-amqp==2.5.2
-ansible==2.9.6
-astroid==2.3.3
-billiard==3.6.1.0
-celery==4.4.0
-certifi==2019.9.11
-cffi==1.13.1
-chardet==3.0.4
-Click==7.0
-coreapi==2.3.3
-coreschema==0.0.4
-cryptography==2.8
-Django==2.2.6
-django-cors-headers==3.2.1
-django-filter==2.2.0
-django-rest-swagger==2.2.0
-djangorestframework==3.10.3
-djangorestframework-jwt==1.11.0
-docopt==0.6.2
-drf-yasg==1.17.0
-idna==2.8
-importlib-metadata==1.3.0
-inflection==0.3.1
-isort==4.3.21
-itypes==1.1.0
-Jinja2==2.10.3
-kombu==4.6.7
-lazy-object-proxy==1.4.3
-MarkupSafe==1.1.1
-mccabe==0.6.1
-more-itertools==8.0.2
-numpy==1.18.2
-openapi-codec==1.3.2
-packaging==19.2
 pandas==1.0.3
-pipreqs==0.4.9
-psutil==5.7.0
-pycparser==2.19
-PyJWT==1.7.1
-pylint==2.4.4
-pyparsing==2.4.2
-python-dateutil==2.8.1
-pytz==2019.3
-PyYAML==5.3.1
-redis==3.4.1
-requests==2.22.0
-ruamel.yaml==0.16.5
-ruamel.yaml.clib==0.2.0
-simplejson==3.16.0
-six==1.12.0
-sqlparse==0.3.0
-supervisor==4.1.0
-typed-ast==1.4.1
-uritemplate==3.0.0
-urllib3==1.25.6
-vine==1.3.0
-wrapt==1.11.2
+Click==7.0
+Django==2.2.6
 xlrd==1.2.0
-yarg==0.1.9
-zipp==0.6.0
+ansible==2.9.6
+drf_yasg==1.17.0
+psutil==5.7.0
+app==0.0.1
+inventory==2.0.1
+kafka==1.3.5
+pymysql==0.9.3
+djangorestframework==3.11.0
+ruamel.base==1.0.0
+xlsxwriter==1.2.8
+PyYAML==5.3.1
