--- a/apps/playbook/roles/mysql/tasks/main.yml
+++ b/apps/playbook/roles/mysql/tasks/main.yml
@@ -8,12 +8,12 @@
 #
 - name: install numactl
   import_tasks: rpm.yml
-  when: ansible_architecture == 'x86_64'
+# when: ansible_architecture == 'x86_64'
   tags: install
 
 - name: install MySQL
   import_tasks: install.yml
-  when: ansible_architecture == 'x86_64'
+# when: ansible_architecture == 'x86_64'
   tags: install
 
 - name: config MySQL
